Generating bloop configs, starting bloop launcher, and sending an almost successful BSP request to Bloop generating classfiles neccary for next target.

--- a/src/main/scala/higherkindness/rules_scala/workers/zinc/compile/BUILD
+++ b/src/main/scala/higherkindness/rules_scala/workers/zinc/compile/BUILD
@@ -14,8 +14,19 @@ scala_binary(
         "//src/main/scala/higherkindness/rules_scala/common/worker",
         "//src/main/scala/higherkindness/rules_scala/workers/common",
         "//third_party/bazel/src/java_tools/buildjar/java/com/google/devtools/build/buildjar/jarhelper",
+        "@annex//:ch_epfl_scala_bsp4j",
+        "@annex//:ch_epfl_scala_bloop_config_2_12",
+        "@annex//:ch_epfl_scala_bloop_launcher_core_2_12",
+        "@annex//:com_kohlschutter_junixsocket_junixsocket_core",
         "@annex//:org_scala_sbt_test_interface",
         "@annex//:org_scala_sbt_zinc_2_12",
+        "@annex//:org_scala_lang_modules_scala_java8_compat_2_12",
+        "@annex//:org_eclipse_xtext_org_eclipse_xtext_xbase_lib"
+#        "@annex//:com_lihaoyi_ammonite_ops_2_12",
+#        "@annex//:com_lihaoyi_upickle_2_12",
+#        "@annex//:io_circe_circe_core_2_12",
+
+
     ],
 )
 
